--- a/abstract.tex
+++ b/abstract.tex
@@ -3,8 +3,8 @@
 % ===============================
 \chapter*{Abstract}
 \addcontentsline{toc}{chapter}{Abstract}
-This thesis presents the design and development of VoiceNotion, an innovative note-taking application based on voice recognition and block-based editing. The main objective is to enable users to quickly capture, organize, and structure their ideas using intuitive voice commands, while providing a modern, cross-platform user experience.
+This thesis presents the design and development of SayNote, an innovative note-taking application based on voice recognition and block-based editing. The main objective is to enable users to quickly capture, organize, and structure their ideas using intuitive voice commands, while providing a modern, cross-platform user experience.
 
 After a thorough study of traditional methods and existing solutions, we propose a technical architecture built on the latest web and mobile technologies, integrating advanced features such as intelligent voice transcription, flexible note management, and a streamlined user interface. The project also emphasizes accessibility, data security, and the integration of a strong visual identity.
 
-The results demonstrate the feasibility and relevance of VoiceNotion in meeting the current needs of students, professionals, and content creators. This work paves the way for future improvements, including enhanced collaborative features and ongoing optimization of voice recognition.
+The results demonstrate the feasibility and relevance of SayNote in meeting the current needs of students, professionals, and content creators. This work paves the way for future improvements, including enhanced collaborative features and ongoing optimization of voice recognition.
