--- a/conclusion.tex
+++ b/conclusion.tex
@@ -2,8 +2,8 @@
 % General Conclusion
 % ===============================
 
-Ce mémoire a présenté le processus de conception, de développement et d’implémentation de l’application VoiceNotion. Nous avons analysé les limites des méthodes traditionnelles de prise de notes, défini une solution innovante fondée sur la reconnaissance vocale et l’édition par blocs, puis détaillé la planification, la conception UX, l’identité visuelle et l’implémentation technique.
+Ce mémoire a présenté le processus de conception, de développement et d’implémentation de l’application SayNote. Nous avons analysé les limites des méthodes traditionnelles de prise de notes, défini une solution innovante fondée sur la reconnaissance vocale et l’édition par blocs, puis détaillé la planification, la conception UX, l’identité visuelle et l’implémentation technique.
 
-VoiceNotion se distingue par sa capacité à rendre la prise de notes plus rapide, accessible et flexible pour un large éventail d’utilisateurs. L’architecture technique moderne, l’accent mis sur l’expérience utilisateur et la sécurité des données, ainsi que l’intégration d’une identité visuelle cohérente, constituent les points forts du projet.
+SayNote se distingue par sa capacité à rendre la prise de notes plus rapide, accessible et flexible pour un large éventail d’utilisateurs. L’architecture technique moderne, l’accent mis sur l’expérience utilisateur et la sécurité des données, ainsi que l’intégration d’une identité visuelle cohérente, constituent les points forts du projet.
 
 Les perspectives d’évolution incluent l’amélioration continue de la reconnaissance vocale, l’ajout de fonctionnalités collaboratives et l’optimisation des performances. Ce travail pose ainsi les bases d’une solution évolutive, adaptée aux besoins futurs en matière de productivité et de gestion de l’information.
