--- a/main.tex
+++ b/main.tex
@@ -1,5 +1,5 @@
 % ===============================
-% VoiceNotion Documentation (Supervisor-Compliant Structure)
+% SayNote Documentation (Supervisor-Compliant Structure)
 % ===============================
 \documentclass[12pt,a4paper]{report}
 
@@ -27,7 +27,7 @@
 \usepackage{tikz}
 \usepackage{listings}
 \usepackage{caption}
-\definecolor{voicenotionLightGray}{RGB}{240,240,240}
+\definecolor{SayNoteLightGray}{RGB}{240,240,240}
 % Dark background color for code snippets
 \definecolor{codebg}{RGB}{30,30,30}
 % Global style for all listings
@@ -70,7 +70,7 @@
 \geometry{margin=2.5cm}
 
 % --- Title ---
-\title{VoiceNotion: Documentation}
+\title{SayNote: Documentation}
 \author{BENBOUZID Rima, DOUMAZ Imene}
 \date{\today}
 
@@ -138,7 +138,7 @@
             \begin{minipage}{13cm}
                 \begin{center}
                     \vspace{-0.5cm}
-                    \fontsize{22}{26}\selectfont \textbf{VoiceNotion} \\
+                    \fontsize{22}{26}\selectfont \textbf{SayNote} \\
                     \fontsize{22}{26}\selectfont \textbf{AI-Based Voice Productivity SaaS Application}
                 \end{center}
             \end{minipage}
@@ -153,13 +153,18 @@
         HAFSAOUI Abderahim & \\
     \end{tabular} \\
     \vspace{0.8cm}
-    
-    {\normalsize Soutenu le \underline{24/06/2024} Devant le jury composé de} \\
-    \vspace{0.4cm}
-    \begin{tabular}{lll}
-        SIACI Redouane & : & Examinateur \\
-        HAMMICHE Mokhtar & : & Président \\
+
+\begin{center}
+    Soutenu le \underline{26/06/2025} Devant le jury composé de
+\end{center}
+
+\begin{center}
+    \begin{tabular}{l c l}
+        D. BELKASMI & : & Président \\
+        D. YAHIATENE & : & Encadreur \\
     \end{tabular}
+\end{center}
+
 \end{center}
 \end{titlepage}
 
@@ -176,7 +181,7 @@
 % --- General Introduction ---
 \chapter*{Introduction générale}
 \addcontentsline{toc}{chapter}{Introduction générale}
-\input{voicenotion_introduction}
+\input{SayNote_introduction}
 
 % ===============================
 % PART I (unnamed): State of the Art
@@ -184,11 +189,11 @@
 
 % --- Chapter 1: Study of the existence ---
 \chapter{Étude de l'existant}
-\input{voicenotion_etude_prealable}
+\input{SayNote_etude_prealable}
 
 % --- Chapter 2: Description of the proposed solution ---
 \chapter{Description de la solution proposée}
-\input{voicenotion_solution}
+\input{SayNote_solution}
 
 % ===============================
 % PART II (unnamed): Contribution
@@ -201,7 +206,7 @@
 
 % --- Chapter 2: Implementation ---
 \chapter{Implémentation}
-\input{voicenotion_implementation}
+\input{SayNote_implementation}
 
 % --- General Conclusion ---
 \section*{Conclusion générale}
