--- a/saynote_chapter_iv.tex
+++ b/saynote_chapter_iv.tex
@@ -1,11 +1,11 @@
 \chapter{Visual Identity}
 
 \section{Introduction}
-This chapter outlines the comprehensive visual identity system for VoiceNotion, a voice-first productivity application that combines modern design principles with accessibility and user-centric features.
+This chapter outlines the comprehensive visual identity system for SayNote, a voice-first productivity application that combines modern design principles with accessibility and user-centric features.
 
 \section{Logo Design}
 \subsection{Evolution Process}
-VoiceNotion's logo development focuses on simplicity, modernity, and voice-centric elements:
+SayNote's logo development focuses on simplicity, modernity, and voice-centric elements:
 \begin{itemize}
     \item Initial concept: Voice waveforms integrated with note-taking symbols
     \item Iterations: Exploring geometric shapes and voice-inspired forms
@@ -22,7 +22,7 @@ VoiceNotion's logo development focuses on simplicity, modernity, and voice-centr
 
 \section{Typography System}
 \subsection{Font Selection}
-VoiceNotion employs a carefully curated typography system that reflects its brand personality:
+SayNote employs a carefully curated typography system that reflects its brand personality:
 \begin{tabular}{|l|l|l|}
 \hline
 \textbf{Font} & \textbf{Style} & \textbf{Usage} \\
@@ -120,4 +120,4 @@ VoiceNotion employs a carefully curated typography system that reflects its bran
 \end{itemize}
 
 \section{Conclusion}
-The VoiceNotion visual identity system represents a cohesive brand that combines modern design principles with voice-centric functionality, maintaining a professional yet approachable aesthetic that reflects the application's core values of calm, clarity, support, and subtle joy.
+The SayNote visual identity system represents a cohesive brand that combines modern design principles with voice-centric functionality, maintaining a professional yet approachable aesthetic that reflects the application's core values of calm, clarity, support, and subtle joy.
