--- a/saynote_commands.tex
+++ b/saynote_commands.tex
@@ -1,4 +1,4 @@
-% VoiceNotion Voice Commands Reference
+% SayNote Voice Commands Reference
 % This file can be included in the main LaTeX document
 
 \chapter{Voice Command Reference}
@@ -78,7 +78,7 @@
 "Redo" & Redoes the previously undone action & "Redo" \\
 
 \bottomrule
-\caption{VoiceNotion Voice Commands}
+\caption{SayNote Voice Commands}
 \label{tab:voice_commands}
 \end{longtable}
 
@@ -119,7 +119,7 @@
 "Create folder [folder name]" & Creates a new folder & "Create folder Research" \\
 
 \bottomrule
-\caption{Advanced VoiceNotion Voice Commands}
+\caption{Advanced SayNote Voice Commands}
 \label{tab:advanced_commands}
 \end{longtable}
 
