--- a/saynote_etude_prealable.tex
+++ b/saynote_etude_prealable.tex
@@ -1,4 +1,4 @@
-% VoiceNotion - Chapitre 2 : Étude de l’existant
+% SayNote - Chapitre 2 : Étude de l’existant
 % Ce chapitre analyse l’état actuel de la prise de notes et de la gestion d’informations, en s’appuyant sur les pratiques, outils et défis rencontrés par les utilisateurs.
 
 % --- Introduction non numérotée ---
