--- a/saynote_solution.tex
+++ b/saynote_solution.tex
@@ -4,10 +4,10 @@
 
 \section*{Introduction}
 \addcontentsline{toc}{section}{Introduction}
-Cette section présente la solution VoiceNotion, conçue pour révolutionner la prise de notes grâce à la voix, l’intelligence artificielle et une expérience utilisateur moderne.
+Cette section présente la solution SayNote, conçue pour révolutionner la prise de notes grâce à la voix, l’intelligence artificielle et une expérience utilisateur moderne.
 
-\section{Présentation générale de VoiceNotion}
-VoiceNotion est une application multiplateforme (web et mobile) dédiée à la prise de notes structurées, à l’édition intuitive et à la productivité augmentée. Elle s’adresse aux étudiants, professionnels et créateurs de contenu souhaitant capturer, organiser et partager leurs idées de manière fluide et efficace.
+\section{Présentation générale de SayNote}
+SayNote est une application multiplateforme (web et mobile) dédiée à la prise de notes structurées, à l’édition intuitive et à la productivité augmentée. Elle s’adresse aux étudiants, professionnels et créateurs de contenu souhaitant capturer, organiser et partager leurs idées de manière fluide et efficace.
 
 Après cette présentation générale, le diagramme de cas d’utilisation principal ci-dessous illustre les interactions majeures entre l’utilisateur et l’application :
 
@@ -21,22 +21,22 @@ Après cette présentation générale, le diagramme de cas d’utilisation princ
     \item \textbf{Personnalisation avancée :} Thèmes clair/sombre, icônes, mise en page adaptable à vos préférences.
 \end{itemize}
 
-Pour illustrer l’expérience utilisateur, la maquette suivante donne un aperçu de l’interface principale de VoiceNotion :
+Pour illustrer l’expérience utilisateur, la maquette suivante donne un aperçu de l’interface principale de SayNote :
 
 \section{Architecture technique (aperçu)}
-VoiceNotion repose sur une architecture cloud moderne, combinant une interface web (Next.js/React), une application mobile (React Native/Expo), et un backend sécurisé (Supabase, PostgreSQL). L’intégration de l’API Gemini permet une transcription vocale précise et contextuelle.
+SayNote repose sur une architecture cloud moderne, combinant une interface web (Next.js/React), une application mobile (React Native/Expo), et un backend sécurisé (Supabase, PostgreSQL). L’intégration de l’API Gemini permet une transcription vocale précise et contextuelle.
 
 Pour conclure cette section, le schéma ci-dessous présente une vue d’ensemble de l’architecture technique de la solution :
 
 \begin{figure}[H]
     \centering
     \includegraphics[width=0.8\textwidth]{assets/docs/global_architecture.png}
-    \caption{Schéma d’architecture globale de VoiceNotion}
+    \caption{Schéma d’architecture globale de SayNote}
     \label{fig:global-architecture}
 \end{figure}
 
 \section{Cas d’utilisation principaux}
-VoiceNotion répond à une variété de scénarios d’utilisation courants :
+SayNote répond à une variété de scénarios d’utilisation courants :
 \begin{itemize}
     \item \textbf{Prise de notes en réunion :} Capturer rapidement les points clés, décisions et actions lors de réunions professionnelles ou associatives.
     \item \textbf{Notes d’étude :} Structurer des résumés de cours, fiches de révision et annotations pour les étudiants.
@@ -46,7 +46,7 @@ VoiceNotion répond à une variété de scénarios d’utilisation courants :
 \end{itemize}
 
 \section{Sécurité et confidentialité}
-La sécurité et la confidentialité des données sont au cœur de la conception de VoiceNotion :
+La sécurité et la confidentialité des données sont au cœur de la conception de SayNote :
 \begin{itemize}
     \item \textbf{Authentification sécurisée :} Utilisation de Supabase pour une gestion robuste des comptes et des accès.
     \item \textbf{Chiffrement des données :} Les notes et informations sensibles sont stockées de manière chiffrée côté serveur.
@@ -55,7 +55,7 @@ La sécurité et la confidentialité des données sont au cœur de la conception
 \end{itemize}
 
 \section{Accessibilité et inclusivité}
-VoiceNotion vise à offrir une expérience accessible à tous les utilisateurs :
+SayNote vise à offrir une expérience accessible à tous les utilisateurs :
 \begin{itemize}
     \item \textbf{Commandes vocales avancées :} Navigation et édition complètes via la voix, réduisant la dépendance au clavier ou à l’écran tactile.
     \item \textbf{Mode hors-ligne :} Accès et modification des notes sans connexion internet, avec synchronisation automatique lors du retour en ligne.
@@ -64,7 +64,7 @@ VoiceNotion vise à offrir une expérience accessible à tous les utilisateurs :
 \end{itemize}
 
 \section{Comparaison avec les solutions existantes}
-Bien que des applications comme Notion ou Evernote proposent des fonctionnalités avancées, VoiceNotion se distingue par :
+Bien que des applications comme Notion ou Evernote proposent des fonctionnalités avancées, SayNote se distingue par :
 \begin{itemize}
     \item \textbf{Intégration native de la saisie et édition vocale :} La voix est au centre de l’expérience, permettant une prise de notes plus rapide et naturelle.
     \item \textbf{Assistant IA embarqué :} Génération de résumés, réponses contextuelles et suggestions automatiques directement dans l’application.
@@ -73,7 +73,7 @@ Bien que des applications comme Notion ou Evernote proposent des fonctionnalité
 \end{itemize}
 
 \section{Limites actuelles et évolutions prévues}
-Malgré ses atouts, VoiceNotion présente certaines limites actuelles :
+Malgré ses atouts, SayNote présente certaines limites actuelles :
 \begin{itemize}
     \item \textbf{Reconnaissance vocale perfectible :} La précision peut varier selon l’accent ou l’environnement sonore ; des améliorations sont prévues via l’intégration de nouveaux modèles.
     \item \textbf{Fonctionnalités collaboratives en développement :} Les options de coédition et de gestion avancée des partages seront enrichies dans les prochaines versions.
@@ -83,4 +83,4 @@ Malgré ses atouts, VoiceNotion présente certaines limites actuelles :
 
 \section*{Conclusion}
 \addcontentsline{toc}{section}{Conclusion}
-VoiceNotion propose une solution innovante et complète pour la prise de notes moderne, alliant puissance technologique, simplicité d’utilisation et adaptabilité aux besoins des utilisateurs.
+SayNote propose une solution innovante et complète pour la prise de notes moderne, alliant puissance technologique, simplicité d’utilisation et adaptabilité aux besoins des utilisateurs.
