--- a/saynote_visual_identity.tex
+++ b/saynote_visual_identity.tex
@@ -6,14 +6,14 @@
 \end{center}
 
 \noindent
-Ce chapitre présente la démarche de création et les choix fondamentaux de l'identité visuelle pour VoiceNotion. Il met en avant l'importance du branding, des couleurs, de la typographie et des supports graphiques pour garantir une expérience utilisateur cohérente et mémorable, tout en valorisant la marque sur tous les supports.
+Ce chapitre présente la démarche de création et les choix fondamentaux de l'identité visuelle pour SayNote. Il met en avant l'importance du branding, des couleurs, de la typographie et des supports graphiques pour garantir une expérience utilisateur cohérente et mémorable, tout en valorisant la marque sur tous les supports.
 
 \section{Introduction}
 Dans ce chapitre nous parlerons de notre identité visuelle. (Couleurs, typographie, charte graphique, design commercial, ...).
 
 \section{Logo}
 \subsection{Name selection}
-\begin{tcolorbox}[colback=voicenotionLightGray!10!white, title=Origine du nom]
+\begin{tcolorbox}[colback=SayNoteLightGray!10!white, title=Origine du nom]
 Le nom \textbf{Saynote} a été soigneusement choisi pour refléter la mission principale de l'application : permettre aux utilisateurs de capturer instantanément leurs idées à l’aide de leur voix. Simple, intuitif et signifiant, « Saynote » incarne l’intersection entre la parole et la productivité. C’est plus qu’un nom, c’est une expérience en un mot.
 \end{tcolorbox}
 
@@ -33,7 +33,7 @@ Ensemble, Saynote devient une commande, un comportement et une marque : il suffi
 \end{itemize}
 
 \subsection{Logo selection}
-Le logo VoiceNotion combine une onde vocale stylisée et la forme d’un bloc-notes, symbolisant la fusion entre la saisie vocale et l’organisation des idées. Le dégradé bleu doux évoque le calme et la clarté, tandis que les coins arrondis et le détail du coin replié ajoutent une touche conviviale et moderne.
+Le logo SayNote combine une onde vocale stylisée et la forme d’un bloc-notes, symbolisant la fusion entre la saisie vocale et l’organisation des idées. Le dégradé bleu doux évoque le calme et la clarté, tandis que les coins arrondis et le détail du coin replié ajoutent une touche conviviale et moderne.
 
 \begin{itemize}
     \item \textbf{Simplicité} : Formes minimales, reconnaissance immédiate.
@@ -50,7 +50,7 @@ Le logo VoiceNotion combine une onde vocale stylisée et la forme d’un bloc-no
 \begin{figure}[H]
     \centering
     \includegraphics[width=0.25\textwidth]{docs/visual-indentity/pictures/logo.png}
-    \caption{Logo principal VoiceNotion. \newline\textit{Ce logo fusionne la notion de voix et de prise de notes, représentant la mission centrale de l'application.}}
+    \caption{Logo principal SayNote. \newline\textit{Ce logo fusionne la notion de voix et de prise de notes, représentant la mission centrale de l'application.}}
 \end{figure}
 
 % Explication brève avant chaque figure
@@ -105,7 +105,7 @@ Police sans-serif, géométrique, épaisse, pour la clarté et la structure.
 \textbf{Corps de texte~:}
 Police sans-serif, arrondie et chaleureuse, pour la lisibilité et l’accessibilité.
 
-L’association des deux polices crée un équilibre entre structure et douceur, fidèle à l’esprit VoiceNotion.
+L’association des deux polices crée un équilibre entre structure et douceur, fidèle à l’esprit SayNote.
 
 \section{Palette de couleurs}
 \subsection{Bleu principal — \#4385F6}
@@ -130,17 +130,17 @@ En combinant ces couleurs, SayNote propose un système visuel harmonieux et émo
 
 \section{Stationery \& Visual Imagination}
 \subsection{Design}
-La papeterie VoiceNotion comprend une gamme complète de supports imprimés, conçus pour refléter l'identité visuelle de la marque et renforcer la cohérence graphique dans toutes les communications professionnelles.
+La papeterie SayNote comprend une gamme complète de supports imprimés, conçus pour refléter l'identité visuelle de la marque et renforcer la cohérence graphique dans toutes les communications professionnelles.
 
 \subsubsection*{Carte de visite}
-La carte de visite VoiceNotion reprend les codes graphiques de la marque : couleurs, typographie et logo. Elle offre une présentation professionnelle et mémorable lors des échanges.
+La carte de visite SayNote reprend les codes graphiques de la marque : couleurs, typographie et logo. Elle offre une présentation professionnelle et mémorable lors des échanges.
 % Explication brève avant chaque figure
 \noindent
 \textit{La figure suivante illustre un élément clé de l'identité visuelle ou de la communication de la marque.}
 \begin{figure}[H]
     \centering
     \includegraphics[width=0.5\textwidth]{docs/visual-indentity/pictures/card.jpg}
-    \caption{Carte de visite VoiceNotion : design épuré et impactant. \newline\textit{Un support professionnel qui véhicule l'identité de la marque.}}
+    \caption{Carte de visite SayNote : design épuré et impactant. \newline\textit{Un support professionnel qui véhicule l'identité de la marque.}}
 \end{figure}
 
 \subsection{Poster}
@@ -159,7 +159,7 @@ Le contenu a été élaboré pour délivrer un message convaincant : titres accr
 \begin{figure}[H]
     \centering
     \includegraphics[width=0.8\textwidth]{docs/visual-indentity/pictures/poster2.jpg}
-    \caption{Poster VoiceNotion : version "Productivité Vocale" – met en avant la rapidité et la simplicité de la prise de notes par la voix. \newline\textit{Ce poster valorise l'usage vocal et la modernité de l'application.}}
+    \caption{Poster SayNote : version "Productivité Vocale" – met en avant la rapidité et la simplicité de la prise de notes par la voix. \newline\textit{Ce poster valorise l'usage vocal et la modernité de l'application.}}
 \end{figure}
 % Explication brève avant chaque figure
 \noindent
@@ -167,12 +167,12 @@ Le contenu a été élaboré pour délivrer un message convaincant : titres accr
 \begin{figure}[H]
     \centering
     \includegraphics[width=0.8\textwidth]{docs/visual-indentity/pictures/poster.jpg}
-    \caption{Poster VoiceNotion : version "Clarté et Innovation" – valorise la fluidité, la technologie et le design moderne de l’application.}
+    \caption{Poster SayNote : version "Clarté et Innovation" – valorise la fluidité, la technologie et le design moderne de l’application.}
 \end{figure}
 
 \subsection{Banner}
 \subsubsection*{a) Concept du design}
-La bannière VoiceNotion est conçue pour renforcer la présence visuelle de la marque lors d’événements ou dans des espaces digitaux. Elle s’appuie sur une composition graphique forte, des couleurs distinctives et des éléments identitaires pour attirer l’attention et transmettre les valeurs du projet.
+La bannière SayNote est conçue pour renforcer la présence visuelle de la marque lors d’événements ou dans des espaces digitaux. Elle s’appuie sur une composition graphique forte, des couleurs distinctives et des éléments identitaires pour attirer l’attention et transmettre les valeurs du projet.
 
 \subsubsection*{b) Développement du contenu}
 Les messages mis en avant sur la bannière sont pensés pour promouvoir la crédibilité, la modernité et la cohérence de la marque, tout en assurant une lisibilité optimale à distance. Les éléments graphiques sont harmonisés avec l’ensemble de la papeterie et des supports visuels.
@@ -184,7 +184,7 @@ Les messages mis en avant sur la bannière sont pensés pour promouvoir la créd
 \begin{figure}[H]
     \centering
     \includegraphics[width=0.8\textwidth]{docs/visual-indentity/pictures/big-banner.jpg}
-    \caption{Bannière principale VoiceNotion : composition graphique forte et identité affirmée. \newline\textit{La bannière incarne la présence visuelle de la marque lors d'événements et en ligne.}}
+    \caption{Bannière principale SayNote : composition graphique forte et identité affirmée. \newline\textit{La bannière incarne la présence visuelle de la marque lors d'événements et en ligne.}}
 \end{figure}
 % Explication brève avant chaque figure
 \noindent
@@ -192,12 +192,12 @@ Les messages mis en avant sur la bannière sont pensés pour promouvoir la créd
 \begin{figure}[H]
     \centering
     \includegraphics[width=0.8\textwidth]{docs/visual-indentity/pictures/big-banner-directly .jpg}
-    \caption{Variante directe de la bannière VoiceNotion : adaptation pour différents contextes visuels. \newline\textit{Cette déclinaison assure la flexibilité de la marque sur divers supports.}}
+    \caption{Variante directe de la bannière SayNote : adaptation pour différents contextes visuels. \newline\textit{Cette déclinaison assure la flexibilité de la marque sur divers supports.}}
 \end{figure}
 
 \subsection{Flyer (Brochure)}
 \subsubsection*{a) Concept du design}
-Le flyer VoiceNotion reprend l’ensemble de l’identité visuelle de la marque pour offrir un support de communication synthétique, élégant et professionnel. Il met en avant la cohérence graphique et la qualité des supports imprimés.
+Le flyer SayNote reprend l’ensemble de l’identité visuelle de la marque pour offrir un support de communication synthétique, élégant et professionnel. Il met en avant la cohérence graphique et la qualité des supports imprimés.
 
 \subsubsection*{b) Développement du contenu}
 Le contenu du flyer est pensé pour présenter les atouts de la marque et renforcer la reconnaissance auprès du public cible. La sélection d’images illustre la diversité et la qualité des supports :
@@ -208,7 +208,7 @@ Le contenu du flyer est pensé pour présenter les atouts de la marque et renfor
 \begin{figure}[H]
     \centering
     \includegraphics[width=0.7\textwidth]{docs/visual-indentity/pictures/pappiers.jpg}
-    \caption{Aperçu général de la papeterie VoiceNotion : enveloppes, blocs-notes et feuilles personnalisées.}
+    \caption{Aperçu général de la papeterie SayNote : enveloppes, blocs-notes et feuilles personnalisées.}
 \end{figure}
 % Explication brève avant chaque figure
 \noindent
@@ -216,7 +216,7 @@ Le contenu du flyer est pensé pour présenter les atouts de la marque et renfor
 \begin{figure}[H]
     \centering
     \includegraphics[width=0.7\textwidth]{docs/visual-indentity/pictures/pappier.jpg}
-    \caption{Papier à en-tête VoiceNotion : design épuré et professionnel. \newline\textit{Un élément essentiel de la papeterie qui renforce la cohérence de l'identité graphique.}}
+    \caption{Papier à en-tête SayNote : design épuré et professionnel. \newline\textit{Un élément essentiel de la papeterie qui renforce la cohérence de l'identité graphique.}}
 \end{figure}
 % Explication brève avant chaque figure
 \noindent
@@ -224,7 +224,7 @@ Le contenu du flyer est pensé pour présenter les atouts de la marque et renfor
 \begin{figure}[H]
     \centering
     \includegraphics[width=0.7\textwidth]{docs/visual-indentity/pictures/pappier-back.jpg}
-    \caption{Verso du papier à en-tête VoiceNotion : souci du détail et harmonie visuelle. \newline\textit{Le verso complète l'expérience de marque jusque dans les moindres détails.}}
+    \caption{Verso du papier à en-tête SayNote : souci du détail et harmonie visuelle. \newline\textit{Le verso complète l'expérience de marque jusque dans les moindres détails.}}
 \end{figure}
 
 
