--- a/saynote_planification_ux.tex
+++ b/saynote_planification_ux.tex
@@ -1,4 +1,4 @@
-% VoiceNotion - Chapitre II: Planification et Conception UX
+% SayNote - Chapitre II: Planification et Conception UX
 % Ce chapitre présente la planification du projet et la conception de l'expérience utilisateur
 
 % --- Introduction non numérotée ---
@@ -6,13 +6,13 @@
     \textbf{\large Introduction du Chapitre}
     \end{center}
     
-        Ce chapitre présente la démarche de planification et la conception de l'expérience utilisateur (UX) pour VoiceNotion. Il détaille la méthodologie adoptée, la structuration du projet, ainsi que l'approche centrée sur l'utilisateur, en mettant l'accent sur l'importance des diagrammes UML et techniques pour la modélisation du système. Le lecteur découvrira comment la planification et la conception UX préparent le terrain pour une implémentation efficace et cohérente.
+        Ce chapitre présente la démarche de planification et la conception de l'expérience utilisateur (UX) pour SayNote. Il détaille la méthodologie adoptée, la structuration du projet, ainsi que l'approche centrée sur l'utilisateur, en mettant l'accent sur l'importance des diagrammes UML et techniques pour la modélisation du système. Le lecteur découvrira comment la planification et la conception UX préparent le terrain pour une implémentation efficace et cohérente.
     
     \section{Introduction}
     
-    Après avoir identifié les problématiques et défini le concept de VoiceNotion dans le chapitre précédent, nous nous concentrons maintenant sur la planification du projet et la conception de l'expérience utilisateur. Cette phase est cruciale pour transformer notre vision en un plan d'action concret et en une interface utilisateur intuitive qui répond aux besoins réels des utilisateurs.
+    Après avoir identifié les problématiques et défini le concept de SayNote dans le chapitre précédent, nous nous concentrons maintenant sur la planification du projet et la conception de l'expérience utilisateur. Cette phase est cruciale pour transformer notre vision en un plan d'action concret et en une interface utilisateur intuitive qui répond aux besoins réels des utilisateurs.
     
-    La planification et la conception UX sont particulièrement importantes pour VoiceNotion en raison de son approche novatrice combinant commandes vocales et édition par blocs. L'interaction vocale, bien que naturelle pour la communication humaine, présente des défis uniques lorsqu'elle est appliquée au contrôle d'une interface numérique. Notre objectif est de créer une expérience fluide et intuitive qui tire pleinement parti des capacités vocales tout en offrant une interface visuelle cohérente et familière.
+    La planification et la conception UX sont particulièrement importantes pour SayNote en raison de son approche novatrice combinant commandes vocales et édition par blocs. L'interaction vocale, bien que naturelle pour la communication humaine, présente des défis uniques lorsqu'elle est appliquée au contrôle d'une interface numérique. Notre objectif est de créer une expérience fluide et intuitive qui tire pleinement parti des capacités vocales tout en offrant une interface visuelle cohérente et familière.
     
     Ce chapitre détaille notre méthodologie de planification, notre approche de l'expérience utilisateur basée sur la recherche et l'empathie, ainsi que la conception technique du système d'information qui sous-tend l'application.
     
@@ -20,11 +20,11 @@
     
     \subsection{Méthodologie de planification}
     
-    Pour le développement de VoiceNotion, nous avons adopté une approche agile, plus précisément la méthodologie Scrum, complétée par des éléments de Design Thinking pour la conception UX. Cette combinaison nous permet d'itérer rapidement tout en gardant l'utilisateur au centre de notre processus de conception.
+    Pour le développement de SayNote, nous avons adopté une approche agile, plus précisément la méthodologie Scrum, complétée par des éléments de Design Thinking pour la conception UX. Cette combinaison nous permet d'itérer rapidement tout en gardant l'utilisateur au centre de notre processus de conception.
     
     \subsubsection{Approche Agile Scrum}
     
-    L'approche Scrum a été choisie pour sa flexibilité et sa capacité à s'adapter aux changements inhérents au développement d'un produit innovant comme VoiceNotion. Nous avons organisé notre travail en sprints de deux semaines, chacun comportant les événements standards de Scrum:
+    L'approche Scrum a été choisie pour sa flexibilité et sa capacité à s'adapter aux changements inhérents au développement d'un produit innovant comme SayNote. Nous avons organisé notre travail en sprints de deux semaines, chacun comportant les événements standards de Scrum:
     
     \begin{itemize}
         \item \textbf{Sprint Planning:} Au début de chaque sprint, l'équipe sélectionne les tâches du Product Backlog à réaliser, en se basant sur leur priorité et la capacité de l'équipe.
@@ -54,14 +54,14 @@
         \item \textbf{Test:} Recueillir les retours des utilisateurs sur les prototypes pour affiner et améliorer les solutions.
     \end{enumerate}
     
-    Cette approche centrée sur l'utilisateur est particulièrement pertinente pour VoiceNotion, où l'interaction vocale nécessite une compréhension fine des attentes et des comportements des utilisateurs.
+    Cette approche centrée sur l'utilisateur est particulièrement pertinente pour SayNote, où l'interaction vocale nécessite une compréhension fine des attentes et des comportements des utilisateurs.
     
         
     \subsection{Planification}
     
     \subsubsection{Roadmap du projet}
     
-    La roadmap de VoiceNotion a été structurée en quatre phases principales, chacune comportant plusieurs sprints:
+    La roadmap de SayNote a été structurée en quatre phases principales, chacune comportant plusieurs sprints:
     
     \begin{enumerate}
         \item \textbf{Phase de recherche et de conception (2 mois):}
@@ -175,7 +175,7 @@ Le tableau~\ref{fig:planification_table} fournit un aperçu visuel ; ci-dessous 
     
     \subsection{Recherche}
     
-    La conception de VoiceNotion est fondée sur une recherche approfondie pour comprendre les besoins, les attentes et les points de friction des utilisateurs potentiels en matière de prise de notes.
+    La conception de SayNote est fondée sur une recherche approfondie pour comprendre les besoins, les attentes et les points de friction des utilisateurs potentiels en matière de prise de notes.
     
     \subsubsection{Méthodologie de recherche}
     
@@ -261,21 +261,21 @@ Le tableau~\ref{fig:planification_table} fournit un aperçu visuel ; ci-dessous 
     
     \subsection{Wireframes de l'application mobile}
     
-    Avant le prototypage final, des wireframes basse fidélité ont été réalisés pour définir la structure et l'expérience utilisateur de l'application mobile VoiceNotion.
+    Avant le prototypage final, des wireframes basse fidélité ont été réalisés pour définir la structure et l'expérience utilisateur de l'application mobile SayNote.
     
     % Explication brève avant la figure
         \textit{La figure suivante présente un wireframe représentatif de l'application mobile.}
     \begin{figure}[H]
         \centering
         \includegraphics[width=0.9\textwidth]{assets/docs/mobile/wireframe_app-1.jpg}
-        \caption{Wireframe de l'application mobile VoiceNotion. \newline\textit{Ce schéma illustre la navigation et la disposition générale des écrans de authentification.}}
+        \caption{Wireframe de l'application mobile SayNote. \newline\textit{Ce schéma illustre la navigation et la disposition générale des écrans de authentification.}}
         \label{fig:wireframe_app_auth}
     \end{figure}
     
     \begin{figure}[H]
         \centering
         \includegraphics[width=0.9\textwidth]{assets/docs/mobile/wireframe_app-2.jpg}
-        \caption{Wireframe de l'application mobile VoiceNotion. \newline\textit{Ce schéma illustre la navigation et la disposition générale des écrans principaux.}}
+        \caption{Wireframe de l'application mobile SayNote. \newline\textit{Ce schéma illustre la navigation et la disposition générale des écrans principaux.}}
         \label{fig:wireframe_app_main}
     \end{figure}
     
@@ -287,13 +287,13 @@ Le tableau~\ref{fig:planification_table} fournit un aperçu visuel ; ci-dessous 
         
     \subsubsection{Scénarios d'utilisations}
     
-    Pour chaque persona, nous avons développé des scénarios d'utilisation qui illustrent comment VoiceNotion répondrait à leurs besoins spécifiques:
+    Pour chaque persona, nous avons développé des scénarios d'utilisation qui illustrent comment SayNote répondrait à leurs besoins spécifiques:
     
     \paragraph{Scénario 1: Yasmine en cours d'Algorithmique}
     
     Yasmine est en cours d'algorithmique, une matière dense où les concepts s'enchaînent rapidement.
     \begin{enumerate}
-        \item Elle lance VoiceNotion et commence à enregistrer l'audio du cours tout en tapant les points clés.
+        \item Elle lance SayNote et commence à enregistrer l'audio du cours tout en tapant les points clés.
         \item Quand le professeur aborde un nouveau chapitre, elle utilise la commande vocale "Nouveau titre: Complexité des algorithmes de tri" pour structurer sa note en temps réel.
         \item Elle dit "Ajouter bloc de code" pour insérer rapidement un exemple de pseudo-code que le professeur écrit au tableau.
         \item Plus tard, en révisant, elle utilise la commande "Résumer les points clés de cette section" pour obtenir une synthèse générée par IA, ce qui lui fait gagner du temps.
@@ -304,7 +304,7 @@ Le tableau~\ref{fig:planification_table} fournit un aperçu visuel ; ci-dessous 
     
     Walid est en voiture entre deux rendez-vous lorsqu'une idée de campagne marketing lui vient à l'esprit.
     \begin{enumerate}
-        \item Il active VoiceNotion en mode mains libres et dit "Nouvelle idée: Campagne de fin d'année pour le client Z".
+        \item Il active SayNote en mode mains libres et dit "Nouvelle idée: Campagne de fin d'année pour le client Z".
         \item Il dicte les concepts clés de la campagne: l'audience cible, le message principal et les canaux de diffusion.
         \item Il utilise la commande "Créer une liste de tâches: Actions pour l'équipe marketing" pour lister les premières étapes.
         \item Il enchaîne avec "Assigner la tâche 'étude de la concurrence' à Sarah" pour déléguer une action immédiatement.
@@ -315,7 +315,7 @@ Le tableau~\ref{fig:planification_table} fournit un aperçu visuel ; ci-dessous 
     
     \subsection{Identification des acteurs}
     
-    Le système VoiceNotion interagit avec plusieurs types d'acteurs, chacun ayant des objectifs et des interactions spécifiques:
+    Le système SayNote interagit avec plusieurs types d'acteurs, chacun ayant des objectifs et des interactions spécifiques:
     
     \begin{itemize}
         \item \textbf{Utilisateur non authentifié:} Peut explorer la landing page, créer un compte ou se connecter.
@@ -329,13 +329,13 @@ Le tableau~\ref{fig:planification_table} fournit un aperçu visuel ; ci-dessous 
     
     \subsection{Diagramme de cas d'utilisation}
     
-    Le diagramme de cas d'utilisation ci-dessous illustre les principales interactions entre les acteurs et le système VoiceNotion:
+    Le diagramme de cas d'utilisation ci-dessous illustre les principales interactions entre les acteurs et le système SayNote:
     
     % Explication brève avant chaque figure
         \begin{figure}[htbp]
         \centering
-        \includegraphics[width=0.9\textwidth]{assets/docs/voicenotion_use_case.png}
-        \caption{Diagramme de cas d'utilisation principal pour VoiceNotion. \newline\textit{Ce diagramme UML met en évidence les interactions principales entre l'utilisateur et le système, servant de base à la conception fonctionnelle.}}
+        \includegraphics[width=0.9\textwidth]{assets/docs/SayNote_use_case.png}
+        \caption{Diagramme de cas d'utilisation principal pour SayNote. \newline\textit{Ce diagramme UML met en évidence les interactions principales entre l'utilisateur et le système, servant de base à la conception fonctionnelle.}}
         \label{fig:use_case_diagram}
     \end{figure}
     
@@ -366,7 +366,7 @@ Le tableau~\ref{fig:planification_table} fournit un aperçu visuel ; ci-dessous 
     % Explication brève avant chaque figure
         \begin{figure}[htbp]
         \centering
-        \includegraphics[width=0.85\textwidth]{assets/docs/voicenotion_sequence_voice.png}
+        \includegraphics[width=0.85\textwidth]{assets/docs/SayNote_sequence_voice.png}
         \caption{Diagramme de séquence pour le traitement d'une commande vocale. \newline\textit{Ce diagramme UML détaille le déroulement des interactions lors de l'utilisation d'une commande vocale.}}
         \label{fig:sequence_voice_command}
     \end{figure}
@@ -378,7 +378,7 @@ Le tableau~\ref{fig:planification_table} fournit un aperçu visuel ; ci-dessous 
     % Explication brève avant chaque figure
         \begin{figure}[htbp]
         \centering
-        \includegraphics[width=0.85\textwidth]{assets/docs/voicenotion_sequence_save.png}
+        \includegraphics[width=0.85\textwidth]{assets/docs/SayNote_sequence_save.png}
         \caption{Diagramme de séquence pour la création et sauvegarde d'une note. \newline\textit{Ce diagramme UML montre le processus de création et de sauvegarde d'une note, mettant en évidence les interactions entre l'utilisateur et le système.}}
         \label{fig:sequence_save_note}
     \end{figure}
@@ -390,7 +390,7 @@ Le tableau~\ref{fig:planification_table} fournit un aperçu visuel ; ci-dessous 
     % Explication brève avant chaque figure
         \begin{figure}[htbp]
         \centering
-        \includegraphics[width=0.85\textwidth]{assets/docs/voicenotion_auth_sequence.png}
+        \includegraphics[width=0.85\textwidth]{assets/docs/SayNote_auth_sequence.png}
         \caption{Diagramme de séquence pour l'authentification. \newline\textit{Ce diagramme UML explicite les étapes de vérification et de validation lors de la connexion d'un utilisateur.}}
         \label{fig:sequence_auth}
     \end{figure}
@@ -399,13 +399,13 @@ Le tableau~\ref{fig:planification_table} fournit un aperçu visuel ; ci-dessous 
     
     \subsubsection{Diagramme entité-relation}
     
-    Le modèle entité-relation ci-dessous représente la structure conceptuelle des données pour VoiceNotion:
+    Le modèle entité-relation ci-dessous représente la structure conceptuelle des données pour SayNote:
     
     % Explication brève avant chaque figure
         \begin{figure}[htbp]
         \centering
-        \includegraphics[width=0.9\textwidth]{assets/docs/voicenotion_er_diagram.png}
-        \caption{Diagramme entité-relation pour VoiceNotion. \newline\textit{Ce diagramme technique présente la structure conceptuelle de la base de données, essentielle pour la gestion des données.}}
+        \includegraphics[width=0.9\textwidth]{assets/docs/SayNote_er_diagram.png}
+        \caption{Diagramme entité-relation pour SayNote. \newline\textit{Ce diagramme technique présente la structure conceptuelle de la base de données, essentielle pour la gestion des données.}}
         \label{fig:er_diagram}
     \end{figure}
     
@@ -430,8 +430,8 @@ Le tableau~\ref{fig:planification_table} fournit un aperçu visuel ; ci-dessous 
     % Explication brève avant chaque figure
         \begin{figure}[htbp]
         \centering
-        \includegraphics[width=0.9\textwidth]{assets/docs/voicenotion_db_schema.png}
-        \caption{Schéma logique de la base de données pour VoiceNotion. \newline\textit{Ce schéma technique traduit le modèle conceptuel en tables relationnelles pour l'implémentation.}}
+        \includegraphics[width=0.9\textwidth]{assets/docs/SayNote_db_schema.png}
+        \caption{Schéma logique de la base de données pour SayNote. \newline\textit{Ce schéma technique traduit le modèle conceptuel en tables relationnelles pour l'implémentation.}}
         \label{fig:db_schema}
     \end{figure}
     
@@ -451,9 +451,9 @@ Le tableau~\ref{fig:planification_table} fournit un aperçu visuel ; ci-dessous 
     
     \section{Conclusion}
     
-    Ce chapitre a présenté notre approche méthodique de la planification du projet VoiceNotion et de la conception de son expérience utilisateur. En combinant une méthodologie agile avec une approche de Design Thinking centrée sur l'utilisateur, nous avons établi un cadre solide pour le développement d'une application qui répond véritablement aux besoins des utilisateurs.
+    Ce chapitre a présenté notre approche méthodique de la planification du projet SayNote et de la conception de son expérience utilisateur. En combinant une méthodologie agile avec une approche de Design Thinking centrée sur l'utilisateur, nous avons établi un cadre solide pour le développement d'une application qui répond véritablement aux besoins des utilisateurs.
     
-    La recherche utilisateur approfondie et l'élaboration de personas détaillés nous ont permis de comprendre intimement les défis et les aspirations de nos utilisateurs cibles. Les scénarios d'utilisation ont illustré comment VoiceNotion s'intégrerait naturellement dans leurs flux de travail quotidiens, offrant une valeur réelle et des améliorations tangibles à leur expérience de prise de notes.
+    La recherche utilisateur approfondie et l'élaboration de personas détaillés nous ont permis de comprendre intimement les défis et les aspirations de nos utilisateurs cibles. Les scénarios d'utilisation ont illustré comment SayNote s'intégrerait naturellement dans leurs flux de travail quotidiens, offrant une valeur réelle et des améliorations tangibles à leur expérience de prise de notes.
     
     La conception technique du système, illustrée par les diagrammes de cas d'utilisation, de séquence et de base de données, fournit une base solide pour l'implémentation qui sera détaillée dans le chapitre suivant. Cette architecture a été conçue pour être robuste, évolutive et flexible, permettant d'accommoder les futures améliorations et extensions de l'application.
     
@@ -465,4 +465,4 @@ Le tableau~\ref{fig:planification_table} fournit un aperçu visuel ; ci-dessous 
     \textbf{\large Conclusion du Chapitre}
     \end{center}
     
-        En résumé, ce chapitre a posé les bases méthodologiques et conceptuelles du projet VoiceNotion. Il a mis en avant l'importance de la planification agile, de la recherche utilisateur, de la modélisation UML et de la conception technique pour garantir le succès de l'implémentation. Les éléments présentés ici serviront de référence pour le développement détaillé exposé dans le chapitre suivant.
+        En résumé, ce chapitre a posé les bases méthodologiques et conceptuelles du projet SayNote. Il a mis en avant l'importance de la planification agile, de la recherche utilisateur, de la modélisation UML et de la conception technique pour garantir le succès de l'implémentation. Les éléments présentés ici serviront de référence pour le développement détaillé exposé dans le chapitre suivant.
